# agentassert-abc

./: .gitignore  .npmignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  contract_request.md  feature_request.md
.github/workflows/: benchmarks.yml  ci.yml  publish-npm.yml  publish-pypi.yml
benchmarks/: README.md  runner.py
benchmarks/scenarios/code-generation/: 001-all-constraints-satisfied.yaml  002-compliant-with-different-values.yaml  003-single-hard-no-secrets-in-output.yaml  004-single-hard-no-malicious-code-patterns.yaml  005-single-hard-license-compliance.yaml  006-single-hard-no-arbitrary-code-execution.yaml  007-single-hard-input-sanitization-required.yaml  008-single-hard-no-hardcoded-credentials.yaml  009-single-hard-no-unauthorized-tools.yaml  010-double-hard-no-secrets-in-outputandno-mal.yaml  011-double-hard-no-malicious-code-patternsand.yaml  012-double-hard-license-complianceandno-arbit.yaml  013-single-soft-code-quality-score.yaml  014-single-soft-test-coverage-suggestion.yaml  015-single-soft-documentation-completeness.yaml  (+8 more)
claim/npm/: README.md  index.js  package.json
contracts/examples/: code-generation.yaml  customer-support.yaml  ecommerce-customer-service.yaml  ecommerce-order-management.yaml  financial-advisor.yaml  healthcare-triage.yaml  mcp-tool-server.yaml  rag-agent.yaml  research-assistant.yaml  retail-shopping-assistant.yaml  telecom-customer-support.yaml
docs/: api.md  benchmarks.md  contracts-catalog.md  contractspec.md  examples.md  getting-started.md  index.md  integrations.md  metrics.md
examples/: 01_basic_monitoring.py  02_ecommerce_session.py  03_drift_detection.py  04_sprt_certification.py  05_langgraph_middleware.py  06_crewai_integration.py  07_composition_pipeline.py  08_mcp_tool_monitoring.py
src/agentassert_abc/: __init__.py  _version.py  exceptions.py  models.py
tests/: test_coverage_gaps.py  test_final_coverage.py
tests/test_certification/: __init__.py  test_composition.py  test_sprt.py
tests/test_dsl/: test_parser.py  test_parser_edges.py  test_validator.py
tests/test_evaluator/: __init__.py  test_evaluate.py  test_operators.py
tests/test_integrations/: test_crewai_adapter.py  test_domain_contracts.py  test_generic_adapter.py  test_import_errors.py  test_langgraph_adapter.py  test_langgraph_monitored_graph.py  test_openai_agents_adapter.py
tests/test_metrics/: test_compliance.py  test_drift.py  test_drift_edges.py  test_property_based.py  test_theta.py
tests/test_models/: test_api_surface.py  test_contract_spec.py  test_exceptions.py  test_version.py
tests/test_monitor/: test_session.py  test_session_edges.py
(+295 files in other folders)
